--- a/packs/vadc/rules/bsd_bandwidth_notify.yaml
+++ b/packs/vadc/rules/bsd_bandwidth_notify.yaml
@@ -15,6 +15,6 @@
     action:
         ref: "chatops.post_message"
         parameters:
-            message: "Bandwidth Updated: {{trigger.instance}}, Bandwidth: {{trigger.bandwidth}}, current: {{trigger.current}}, average: {{trigger.average}}"
+            message: "Bandwidth Updated: {{trigger.instance}}, Tag: {{trigger.tag}}, Bandwidth: {{trigger.bandwidth}}, current: {{trigger.current}}, average: {{trigger.average}}"
             channel: "stackstorm"
 
