--- a/packs/ciscospark/actions/delete_room.yaml
+++ b/packs/ciscospark/actions/delete_room.yaml
@@ -1,7 +1,7 @@
 ---
-name: create_room
+name: delete_room
 runner_type: run-python
-description: Create a new room
+description: Delete a room
 enabled: true
 entry_point: generic_action.py
 parameters:
@@ -11,13 +11,9 @@ parameters:
     immutable: true
   method_name:
     type: string
-    default: 'create'
+    default: 'delete'
     immutable: true
-  title:
+  roomId:
     type: string
     required: true
-    description: "Room title"
-  teamId:
-    type: string
-    required: false
-    description: "The team ID with which this room is associated"
+    description: "The ID"
