Update author - st2-dev -> StackStorm, Inc.

--- a/packs/chef/pack.yaml
+++ b/packs/chef/pack.yaml
@@ -10,5 +10,5 @@ keywords:
   - configuration management
   - opscode
 version : 0.1.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
