--- a/packs/libcloud/pack.yaml
+++ b/packs/libcloud/pack.yaml
@@ -19,5 +19,5 @@ keywords:
   - gce
   - google compute engine
 version : 0.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
