--- a/packs/newrelic/pack.yaml
+++ b/packs/newrelic/pack.yaml
@@ -7,5 +7,5 @@ keywords:
   - app monitoring
   - application level monitoring
 version : 0.2
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
