--- a/packs/typeform/pack.yaml
+++ b/packs/typeform/pack.yaml
@@ -2,5 +2,5 @@
 name : typeform
 description : Typeform service integration pack
 version : 0.2
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
