--- a/packs/azure/pack.yaml
+++ b/packs/azure/pack.yaml
@@ -10,5 +10,5 @@ keywords:
   - virtual machines
   - azure virtual machines
 version : 0.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
