--- a/packs/bitcoin/pack.yaml
+++ b/packs/bitcoin/pack.yaml
@@ -4,5 +4,5 @@ description : bitcoin integration pack
 keywords:
   - bitcoin
 version : 0.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
