--- a/packs/config_demo/pack.yaml
+++ b/packs/config_demo/pack.yaml
@@ -2,5 +2,5 @@
 name : config_demo
 description : Pack which demonstrated new pack configuration functionality available in StackStorm v1.5 and above.
 version : 0.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
