--- a/packs/csv/pack.yaml
+++ b/packs/csv/pack.yaml
@@ -7,5 +7,5 @@ keywords:
   - deserialization
   - text processing
 version : 0.2
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
