--- a/packs/digitalocean/pack.yaml
+++ b/packs/digitalocean/pack.yaml
@@ -2,5 +2,5 @@
 name : Digital Ocean
 description : st2 content pack containing Digital Ocean integration.
 version : 0.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
