--- a/packs/ipcam/pack.yaml
+++ b/packs/ipcam/pack.yaml
@@ -9,5 +9,5 @@ keywords:
   - smart home
   - home automation
 version : 0.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
