--- a/packs/irc/pack.yaml
+++ b/packs/irc/pack.yaml
@@ -8,5 +8,5 @@ keywords:
   - messaging
   - instant messaging
 version : 0.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
