--- a/packs/packagecloud/pack.yaml
+++ b/packs/packagecloud/pack.yaml
@@ -4,5 +4,5 @@ description : packagecloud integration pack
 keywords:
   - packagecloud
 version : 0.4
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
