--- a/packs/puppet/pack.yaml
+++ b/packs/puppet/pack.yaml
@@ -6,5 +6,5 @@ keywords:
   - cfg management
   - configuration management
 version : 0.2
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
