--- a/packs/save_kittens/pack.yaml
+++ b/packs/save_kittens/pack.yaml
@@ -2,5 +2,5 @@
 name : save_kittens
 description : Save the world. One puzzle at a time.
 version : 0.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
