--- a/packs/slack/pack.yaml
+++ b/packs/slack/pack.yaml
@@ -7,5 +7,5 @@ keywords:
   - messaging
   - instant messaging
 version : 0.2.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
