--- a/packs/st2/pack.yaml
+++ b/packs/st2/pack.yaml
@@ -3,5 +3,5 @@
 name: st2
 description: StackStorm pack management
 version: 0.1.2
-author: st2-dev
+author: StackStorm, Inc.
 email: info@stackstorm.com
