--- a/packs/twilio/pack.yaml
+++ b/packs/twilio/pack.yaml
@@ -2,5 +2,5 @@
 name : twilio
 description : st2 content pack containing twilio integrations
 version : 0.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
