--- a/packs/twitter/pack.yaml
+++ b/packs/twitter/pack.yaml
@@ -6,5 +6,5 @@ keywords:
   - social media
   - social networks
 version : 0.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
