--- a/packs/vdx/pack.yaml
+++ b/packs/vdx/pack.yaml
@@ -2,5 +2,5 @@
 name: vdx
 description: Brocade VDX integration pack.
 version: 0.0.1
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
