Add "ref" attribute which matches the directory name to all the pack metadata files.

--- a/packs/fireeye/pack.yaml
+++ b/packs/fireeye/pack.yaml
@@ -1,5 +1,6 @@
 ### Place information about your pack version here.
 ---
+ref: fireeye
 name: fireeye
 description: FireEye CM Series Integration
 version: 0.1.0
