--- a/packs/hubot/pack.yaml
+++ b/packs/hubot/pack.yaml
@@ -1,7 +1,7 @@
 ---
+ref: hubot
 name: hubot
 description: Hubot integration pack
 version: 0.1.0
 author: James Fryman
 email: james@stackstorm.com
-
