--- a/packs/mqtt/pack.yaml
+++ b/packs/mqtt/pack.yaml
@@ -1,5 +1,6 @@
 ### Place information about your pack version here.
 ---
+ref: mqtt
 name: mqtt
 description: MQTT Integration for StackStorm
 version: 0.1.0
