--- a/packs/victorops/pack.yaml
+++ b/packs/victorops/pack.yaml
@@ -1,3 +1,5 @@
+---
+ref: victorops
 name: victorops
 description: Packs which allows integration with Victorops events.
 keywords:
@@ -5,4 +7,4 @@ keywords:
   - open, ack and resolve incidents
 version: 0.1.0
 author: Aamir
-email: raza.aamir01@gmail.com                               
+email: raza.aamir01@gmail.com
