--- a/packs/config_demo/pack.yaml
+++ b/packs/config_demo/pack.yaml
@@ -1,4 +1,5 @@
 ---
+ref: config_demo
 name : config_demo
 description : Pack which demonstrated new pack configuration functionality available in StackStorm v1.5 and above.
 version : 0.1.0
