--- a/packs/hue/pack.yaml
+++ b/packs/hue/pack.yaml
@@ -1,5 +1,6 @@
 ### Place information about your pack version here.
 ---
+ref: hue
 name: hue
 description: Philips Hue Pack
 version: 0.0.2
@@ -9,4 +10,3 @@ keywords:
   - hue
   - philips
   - iot
-
