--- a/packs/reamaze/pack.yaml
+++ b/packs/reamaze/pack.yaml
@@ -1,8 +1,8 @@
 ### Place information about your pack version here.
 ---
+ref: reamaze
 name: reamaze
 description: reamaze Integration Pack
 version: 0.1.1
 author: James Fryman
 email: james@stackstorm.com
-
