--- a/packs/st2/pack.yaml
+++ b/packs/st2/pack.yaml
@@ -1,5 +1,6 @@
 ### Place information about your pack version here.
 ---
+ref: st2
 name: st2
 description: StackStorm pack management
 version: 0.1.2
