--- a/packs/zendesk/pack.yaml
+++ b/packs/zendesk/pack.yaml
@@ -1,10 +1,11 @@
 ---
+ref: zendesk
 name : zendesk
 description : st2 content pack containing zendesk integrations
 keywords:
   - zendesk
   - support
   - ticketing
-version : 0.2
+version : 0.2.0
 author : Casey Richardson
 email : casey@bluechasm.com
