Small typo in keywords
Fixing typo since the new pack management highlights it as a typo

--- a/packs/victorops/pack.yaml
+++ b/packs/victorops/pack.yaml
@@ -3,7 +3,7 @@ ref: victorops
 name: victorops
 description: Packs which allows integration with Victorops events.
 keywords:
-  - victorps integration
+  - victorops integration
   - open, ack and resolve incidents
 version: 0.1.0
 author: Aamir
