--- a/packs/hpe_icsp/actions/icsp_ids_to_os.yaml
+++ b/packs/hpe_icsp/actions/icsp_ids_to_os.yaml
@@ -1,10 +1,10 @@
 ---
-name: "icsp_multi_server_attribute_add"
+name: "icsp_ids_to_os"
 runner_type: "mistral-v2"
-pack: "hpe-icsp"
+pack: "hpe_icsp"
 enabled: true
-entry_point: "workflows/icsp_multi_server_attribute_add.yaml"
-description: "Apply Attribute with server unique values across multiple servers."
+entry_point: "workflows/icsp_ids_to_os.yaml"
+description: "Apply OS Build plans to a series of Machine Serial Number/UUIDs. This will create a batch job in ICSP for the specified servers."
 
 parameters:
   identifiers:
@@ -18,24 +18,25 @@ parameters:
     type: string
     enum:
       - serialnumber
-      - uuid
+      - UUID
     default: serialnumber
-  attribute_key:
+  hostnames:
     required: true
     position: 2
-    type: string
-    description: "Attribute Key to be added."
-  attribute_values:
+    type: array
+    description: "Hostname to be applied to this server, Must match order of identifiers."
+  buildplan_ids:
     required: true
     position: 3
     type: array
-    description: "List of Values to be set against servers. Must match order of identifier."
+    description: "Comma seperated list of Builplan URI ids"
   connection_details:
     required: false
     position: 4
     type: object
     description: "Overriding connection details for ICSP server"
   workflow:
-    default: hpe-icsp.icsp_multi_server_attribute_add.entry
+    default: hpe_icsp.icsp_ids_to_os.entry
     immutable: true
     type: string
+
