--- a/packs/hpe_icsp/pack.yaml
+++ b/packs/hpe_icsp/pack.yaml
@@ -1,6 +1,6 @@
 ---
-ref: hpe-icsp
-name : hpe-icsp
+ref: hpe_icsp
+name : hpe_icsp
 description : Pack for HP Enterprise Insight Control Server Provisioning Integration
 version : 0.3.1
 author : Paul Mulvihill
