migrate mmonit to config.schema

--- a/packs/mmonit/mmonit.yaml.example
+++ b/packs/mmonit/mmonit.yaml.example
@@ -3,8 +3,8 @@ username: ""
 password: ""
 host: ""
 shared_sensors_config:
-  host:
-  username:
-  password:
+  host: ""
+  username: ""
+  password: ""
   event_types: 1,2
   active: 1
