Update event_types configuration option in the mmonit pack to utilize native platform type (array instead of string).

--- a/packs/mmonit/mmonit.yaml.example
+++ b/packs/mmonit/mmonit.yaml.example
@@ -6,5 +6,7 @@ shared_sensors_config:
   host: ""
   username: ""
   password: ""
-  event_types: 1,2
+  event_types:
+    - "1"
+    - "2"
   active: 1
