--- a/packs/sensu/actions/client_info.yaml
+++ b/packs/sensu/actions/client_info.yaml
@@ -1,15 +1,11 @@
 ---
 name: client_info
-runner_type: run-local-script
+runner_type: run-python
 description: Get Sensu client info
 enabled: true
-entry_point: clients.py
+entry_point: client_info.py
 parameters:
   client:
     type: string
     description: The client name
     required: true
-  sudo:
-    immutable: true
-  kwarg_op:
-    immutable: true
