--- a/packs/sensu/actions/event_client_list.yaml
+++ b/packs/sensu/actions/event_client_list.yaml
@@ -1,15 +1,11 @@
 ---
 name: event_client_list
-runner_type: run-local-script
+runner_type: run-python
 description: List Sensu events for a given client
 enabled: true
-entry_point: events.py
+entry_point: event_client_list.py
 parameters:
   client:
     type: string
     description: The client name
     required: true
-  sudo:
-    immutable: true
-  kwarg_op:
-    immutable: true
