--- a/packs/sensu/actions/event_info.yaml
+++ b/packs/sensu/actions/event_info.yaml
@@ -1,9 +1,9 @@
 ---
 name: event_info
-runner_type: run-local-script
+runner_type: run-python
 description: Get Sensu event info
 enabled: true
-entry_point: events.py
+entry_point: event_info.py
 parameters:
   client:
     type: string
@@ -13,7 +13,3 @@ parameters:
     type: string
     description: The check to get information on
     required: true
-  sudo:
-    immutable: true
-  kwarg_op:
-    immutable: true
