--- a/packs/twitter/twitter.yaml.example
+++ b/packs/twitter/twitter.yaml.example
@@ -1,9 +1,9 @@
 ---
-consumer_key:
-consumer_secret:
+consumer_key: "your consumer key"
+consumer_secret: "your consumer secret"
 
-access_token:
-access_token_secret:
+access_token: "your access token"
+access_token_secret: "your access token secret"
 
 query:
   - "StackStorm"
